Avoid crashing when trying to open a directory

BUG: 384665